# dapqa-recsys-utils

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
drsu/: config.py  datasets.py
drsu/datasets/: __init__.py  _descriptor_classes.py  _descriptors.py  _downloader.py  _reader.py  _utils.py
tests/: conftest.py
tests/datasets/: conftest.py  test_download_transform_read.py  test_paths.py
