[metadata]
name = dapqa-recsys-utils
version = 0.0.1
author = Alexander Nechaev
author_email = dapqa@yandex.ru
description = Small RecSys utils library (datasets and evaluation utils)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dapqa/dapqa-recsys-utils

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src