[metadata]
name = dapqa-recsys-utils
version = 0.0.3
author = Alexander Nechaev
author_email = dapqa@yandex.ru
description = Small RecSys utils library (datasets and evaluation utils)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dapqa/dapqa-recsys-utils

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    numpy == 1.20.3
    pandas == 1.2.3
    gdown == 4.2.0
    kaggle == 1.5.12

[options.packages.find]
where = .

[tool:pytest]
testpaths = tests
skip_datasets = # may be also set via --skip_datasets=id1,id2,... CLI option to skip slow dataset tests